# cipher

./: Cargo.toml  README.md  download-latest.sh
.github/workflows/: publish-binaries.yml
src/: crypto.rs  main.rs
