[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.38"
anyhow = "1.0"
rand = "0.8"
ring = "0.16"
zeroize = "1.5.5"
rust-argon2 = "1.0.0"
rpassword = "6.0.1"
clap = { version = "3.2.5", features = ["derive"] }
